codama-macros/tests/codama_attribute/type_nodes/struct_field_type_node/type_missing.fail.rs
use codama_macros::codama;

#[codama(type = field("age"))]
pub struct Test;

#[codama(type = field(name = "age"))]
pub struct TestExplicit;

fn main() {}
